tests/suite/similar-names/fail/FailType.hs

module Main where

data HelloWorld = A deriving ( Show )
data Helloworld = B deriving ( Show )

main = do
  print A
  print B



